feat: :sparkles: Changes
changes added in some dtos

--- a/ApiVet/appsettings.json
+++ b/ApiVet/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexMysql":"server=localhost;user=root;password=sparkly23.;database=veterinariacampus"
+    "ConexMysql":"server=localhost;user=root;password=123456;database=veterinariacampus"
   },
   "JWT": {
     "Key": "dsdadsdsadsadsadsadsadsadsadasds",
